src/objects/Submodel_Factory_Option_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Factory_Option__c</fullName>
        <label>Factory Option</label>
        <referenceTo>Factory_Option__c</referenceTo>
        <relationshipLabel>Submodel Factory Option Junctions</relationshipLabel>
        <relationshipName>Submodel_Factory_Option_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Submodel_Factory_Option_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Model</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Submodel Factory Option Junctions</relationshipLabel>
        <relationshipName>Submodel_Factory_Option_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Sub_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Sub Model</label>
        <referenceTo>Unit_Sub_Model__c</referenceTo>
        <relationshipLabel>Submodel Factory Option Junctions</relationshipLabel>
        <relationshipName>Submodel_Factory_Option_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Submodel Factory Option Junction</label>
    <nameField>
        <displayFormat>SFOJ-{00000000}</displayFormat>
        <label>Submodel Factory Option Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submodel Factory Option Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>